--- a/templates/site/products.html
+++ b/templates/site/products.html
@@ -80,7 +80,7 @@ html {
 </style>
 
 <!-- CSS for filter and search -->
-<link rel="stylesheet" href="{% static 'css/site/main.css' %}">
+<!-- <link rel="stylesheet" href="{% static 'css/site/main.css' %}"> -->
 {% endblock %}
 
 {% block content %}
