--- a/templates/base.html
+++ b/templates/base.html
@@ -52,6 +52,13 @@
                 </ul>
                 
             </div>
+            <div>
+                {% if request.user.is_authenticated %}
+                    Hi {{ request.user.first_name }} | <a href="{% url 'logout' %}" class="btn btn-info">Logout</a>
+                {% else %}
+                    <a href="{% url 'login' %}" class="btn btn-info">Login</a>
+                {% endif %}
+            </div>
         </div>
     </nav>
     
