--- a/templates/logistics/logistics.html
+++ b/templates/logistics/logistics.html
@@ -80,7 +80,7 @@ html {
 </style>
 
 <!-- CSS for filter and search -->
-<link rel="stylesheet" href="{% static 'css/site/main.css' %}">
+<!-- <link rel="stylesheet" href="{% static 'css/site/main.css' %}"> -->
 {% endblock %}
 
 {% block content %}
@@ -90,64 +90,100 @@ html {
 <section style="padding-top: 10px;">
   <div class="container">
     <div class="row justify-content-center padding">
-      <div class="col-md-8 ftco-animate fadeInUp ftco-animated">
+      <div class="col-md-10 ftco-animate fadeInUp ftco-animated">
         <form type="GET" action="" class="domain-form">
           <div class="form-group d-md-flex">
-            <!-- Project Dropdowns -->
-            <input type="text" name="category" id="categoryinput" value="1"
-              style="visibility: hidden; width: 1px;">
 
-            <select class="custom-select my-1 mx-1 mr-sm-2 border rounded px-1 py-2" id="inlineFormCustomSelectPref" style="min-width: 100px;">
-              <option selected>
-                All
-              </option>
-              <option value="hemmesi">CRA</option>
-              <option value="saherici">CRI</option>
-              <option value="etrapobalary">CCI</option>
-              <option value="saherara">HTC</option>
+              <select name="project"  class="custom-select my-1 mx-1 mr-sm-2 border rounded px-1 py-2 "  id="projectSelect" style="min-width: 110px; ">
+                {% if request.GET.project is None %}
+                  <option value="" selected> All Projects</option>
+                {% else %}
+                  <option  value=""> All Projects</option>
+                {% endif %}
+                
+                {% for project in projects %}
+                  {% if request.GET.project|floatformat:"0" == project.id|floatformat:"0" %}
+                    <option value="{{project.id}}" selected>{{project.code}}</option>
+                  {% else %}
+                    <option value="{{project.id}}">{{project.code}}</option>
+                  {% endif %}
+                {% endfor %}
             </select>
-            <!-- Trade Dropdowns -->
-            <input type="text" name="category" id="categoryinput" value="1"
-              style="visibility: hidden; width: 1px;">
 
-            <select class="custom-select my-1 mx-1 mr-sm-2 border rounded px-1 py-2" id="inlineFormCustomSelectPref" style="min-width: 100px;">
-              <option selected>
-                All
-              </option>
-              <option value="hemmesi">CEA</option>
-              <option value="saherici">CC</option>
-              <option value="etrapobalary">MEC</option>
-              <option value="saherara">ELE</option>
-            </select>
-            <!-- Lot Dropdowns -->
-            <input type="text" name="category" id="categoryinput" value="1"
-              style="visibility: hidden; width: 1px;">
+            <select name = "trade" class="custom-select my-1 mx-1 mr-sm-2 border rounded px-1 py-2" id="tradeSelect" style="min-width: 150px;">
+              {% if request.GET.trade is None %}
+                  <option value=""  selected> All Trades</option>
+              {% else %}
+                  <option value="" >All Trades</option>
+              {% endif %}
 
-            <select class="custom-select my-1 mx-1 mr-sm-2 border rounded px-1 py-2" id="inlineFormCustomSelectPref" style="min-width: 100px;">
-              <option selected>
-                All
-              </option>
-              <option value="hemmesi">02</option>
-              <option value="saherici">20</option>
-              <option value="etrapobalary">70C</option>
-              <option value="saherara">31</option>
+              {% for trade in trades %}
+                {% if request.GET.trade|floatformat:"0" == trade.id|floatformat:"0" %}
+                  <option value="{{trade.id}}" selected>{{trade.name_fr}}</option>
+                {% else %}
+                  <option value="{{trade.id}}">{{trade.name_fr}}</option>
+                {% endif %}
+              {% endfor %}
             </select>
+
+            <select name="lot" class="custom-select my-1 mx-1 mr-sm-2 border rounded px-1 py-2" id="lotSelect" style="min-width: 140px;">
+              {% if request.GET.lot is None %}
+                  <option  value="" selected>All Lots</option>
+              {% else %}
+                  <option value="" > All Lots</option>
+              {% endif %}
+
+              {% for lot in lots %}
+                {% if request.GET.lot|floatformat:"0" == lot.id|floatformat:"0" %}
+                  <option value="{{lot.id}}" selected>{{lot}}</option>
+                {% else %}
+                <option value="{{lot.id}}">{{lot}}</option>
+                {% endif %}
+              {% endfor %}
+            </select>
+
+            <select name="annexe5" class="custom-select my-1 mx-1 mr-sm-2 border rounded px-1 py-2" id="annexe5Select" style="min-width: 150px;">
+              {% if request.GET.annexe5 is None %}
+                  <option  value="" selected>All Annexe-5</option>
+              {% else %}
+                  <option value="" > All Annexe-5</option>
+              {% endif %}
+
+              {% for annexe5 in annexe5s %}
+                {% if request.GET.annexe5|floatformat:"0" == annexe5.id|floatformat:"0" %}
+                  <option value="{{annexe5.id}}" selected>{{ annexe5 }}</option>
+                {% else %}
+                <option value="{{annexe5.id}}">{{ annexe5 }}</option>
+                {% endif %}
+              {% endfor %}
+            </select>
+
             <!-- Search box -->
             <input id="search" name='search' type="text" class="form-control px-4 my-1  mx-1"
-              placeholder="What are you searching for...">
+              placeholder="Search anything...">
             <input type="submit" class="search-domain btn btn-primary px-5 my-1  mx-1" value="Search">
+
+            
           </div>
         </form>
       </div>
+      
+      <!-- Clear Filter -->
+      <div class="row col-2 justify-content-end">
+        <a href="?" class="btn btn-info col-8 m-1">Clear Filter</a>
+      </div> <!-- Clear Filter is ending -->
+        
     </div>
   </div>
 </section>
+
 <div class="fp-list" id="fp-list">
 
 
   <table class="table">
     <thead>
       <tr class="">
+        <th scope="col">Project</th>
         <th scope="col">Facture</th>
         <th scope="col">Specification</th>
         <th scope="col">TDS</th>
@@ -159,6 +195,7 @@ html {
     <tbody>
       {% for facture in factures %}
       <tr class="px-4 ">
+        <td class="">{{ facture.project }}</td>
         <td class="">{{ facture.number }}</td>
         
         <td class="" style="text-align: center;">
@@ -225,15 +262,35 @@ html {
       </tr>
       {% endfor %}
     </tbody>
-  </div>
-</table>
-<nav class="pgntn" aria-label="Pagination">
-  <ul class="pagination">
-    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">Next</a></li>
-  </ul>
-</nav>
+  </table>
+  <!-- Pagination -->
+  <nav class="pgntn" aria-label="Pagination">
+    <ul class="pagination">
+      {% if page_obj.has_previous %}
+      
+      <li class="page-item"><a class="page-link" 
+        href="?{% for key, value in request.GET.items %}{{key}}={{value}}&{% endfor %}page=">&laquo;&laquo; First</a>
+      </li>
+      <li class="page-item"><a class="page-link" 
+        href="?{% for key, value in request.GET.items %}{{key}}={{value}}&{% endfor %}page={{ page_obj.previous_page_number }}">&laquo; Previous</a>
+      </li>
+      {% endif %}
+      <li class="page-item  mx-1 ">
+        <span class="current page-item page-link bg-info text-light">
+          Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
+      </li>
+      {% if page_obj.has_next %}
+      <li class="page-item"><a class="page-link" href="?{% for key, value in request.GET.items %}{{key}}={{value}}&{% endfor %}page={{ page_obj.next_page_number }}">
+        Next &raquo;</a>
+      </li>
+      <li class="page-item"><a class="page-link" href="?{% for key, value in request.GET.items %}{{key}}={{value}}&{% endfor %}page={{ page_obj.paginator.num_pages }}">
+        Last &raquo;&raquo;</a>
+      </li>
+      {% endif %}
+    </ul>
+  </nav>
+</div>
 
 {% endblock %}
 
@@ -260,5 +317,5 @@ html {
   });
 </script>
 <!-- JS for filter and search. -->
-<script src="{% static 'js/site/main.js' %}"></script>
+<!-- <script src="{% static 'js/site/main.js' %}"></script> -->
 {% endblock %}
