--- a/templates/site/site.html
+++ b/templates/site/site.html
@@ -82,7 +82,7 @@ html {
 </style>
 
 <!-- CSS for filter and search -->
-<link rel="stylesheet" href="{% static 'css/site/main.css' %}">
+<!-- <link rel="stylesheet" href="{% static 'css/site/main.css' %}"> -->
 {% endblock %}
 
 {% block content %}
@@ -96,7 +96,7 @@ html {
       <div class="col-md-10 ftco-animate fadeInUp ftco-animated">
         <form type="GET" action="" class="domain-form">
           <div class="form-group d-md-flex">
-              
+
               <select name="project"  class="custom-select my-1 mx-1 mr-sm-2 border rounded px-1 py-2 "  id="projectSelect" style="min-width: 110px; ">
                 {% if request.GET.project is None %}
                   <option value="" selected> All Projects</option>
@@ -163,7 +163,7 @@ html {
 
             <!-- Search box -->
             <input id="search" name='search' type="text" class="form-control px-4 my-1  mx-1"
-              placeholder="Search product name...">
+              placeholder="Search anything...">
             <input type="submit" class="search-domain btn btn-primary px-5 my-1  mx-1" value="Search">
 
             
@@ -171,78 +171,80 @@ html {
         </form>
       </div>
       
-      <!-- Clear Filter and Advanced Search -->
+      <!-- Clear Filter -->
       <div class="row col-2 justify-content-end">
-        <a href="?" class="btn btn-info col-5 m-1">Clear Filter</a>
-        <button type="button" id="advancedbutton" class="btn btn-info col-6 m-1" data-bs-toggle="modal" data-bs-target=".bd-example-modal-lg">Advanced Search</button>
+        <a href="?" class="btn btn-info col-8 m-1">Clear Filter</a>
+        <!-- <button type="button" id="advancedbutton" class="btn btn-info col-6 m-1" data-bs-toggle="modal" data-bs-target=".bd-example-modal-lg">Advanced Search</button> -->
         
-        <div class="modal fade bd-example-modal-lg" tabindex="-1" id="advanvedsearch" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+        <!-- <div class="modal fade bd-example-modal-lg" tabindex="-1" id="advanvedsearch" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
           <div class="modal-dialog modal-lg">
             <div class="modal-content px-4 py-5">
               <h1>Advanced Search</h1>
               
               <form type="GET" action="" class="domain-form mx-3">
-                
+                 -->
+
+
                 <!-- Number -->
-                <div class="form-group row">
+                <!-- <div class="form-group row">
                   <label for="ordersearch" class="col-sm-2 col-form-label my-2">FP Number</label>
                   <div class="col-sm-10">
                     <input type="text" name='number' class="form-control" id="numbersearch" placeholder="FP Number">
                   </div>
-                </div>
+                </div> -->
                 
                 <!-- Order -->
-                <div class="form-group row">
+                <!-- <div class="form-group row">
                   <label for="ordersearch" class="col-sm-2 col-form-label my-2">Order</label>
                   <div class="col-sm-10">
                     <input type="text" name='order' class="form-control" id="ordersearch" placeholder="Order">
                   </div>
-                </div>
+                </div> -->
                 
                 <!-- Facture -->
-                <div class="form-group row">
+                <!-- <div class="form-group row">
                   <label for="facturesearch" class="col-sm-2 col-form-label my-2">Facture</label>
                   <div class="col-sm-10">
                     <input type="text" name='facture'  class="form-control" id="facturesearch" placeholder="Facture">
                   </div>
-                </div>
+                </div> -->
                 
                 <!-- Specification -->
-                <div class="form-group row">
+                <!-- <div class="form-group row">
                   <label for="specificationsearch" class="col-sm-2 col-form-label my-2">Specification</label>
                   <div class="col-sm-10">
                     <input type="text" name='specification'  class="form-control" id="specificationsearch" placeholder="Specification">
                   </div>
-                </div>
+                </div> -->
                 
                 <!-- TDS -->
-                <div class="form-group row">
+                <!-- <div class="form-group row">
                   <label for="tdssearch" class="col-sm-2 col-form-label my-2">TDS</label>
                   <div class="col-sm-10">
                     <input type="text" name="tds" class="form-control" id="tdssearch" placeholder="TDS">
                   </div>
-                </div>
+                </div> -->
                 
                 <!-- COO -->
-                <div class="form-group row">
+                <!-- <div class="form-group row">
                   <label for="coosearch" class="col-sm-2 col-form-label my-2">COO</label>
                   <div class="col-sm-10">
                     <input type="text" name="coo" class="form-control" id="coosearch" placeholder="COO">
                   </div>
-                </div>
+                </div> -->
                 
                 <!-- Submit Button -->
-                <div class="form-group row py-2 mt-3">
+                <!-- <div class="form-group row py-2 mt-3">
                   <div class="col-sm-10">
                     <button type="submit" class="btn btn-primary">Search very advanced</button>
                   </div>
-                </div>
+                </div> -->
                 
                 
-              </form>
-            </div>
-          </div>
-        </div> <!-- modal ending -->
+              <!-- </form> -->
+            <!-- </div> -->
+          <!-- </div> -->
+        <!-- </div> modal ending -->
       </div> <!-- Advanced Search is ending ending -->
         
     </div>
@@ -391,26 +393,28 @@ html {
   </div>
 </table>
 
-?{% for key, value in request.GET.items %}
-  &{{ key }}={{ value }}
-{% endfor %}
 <nav class="pgntn" aria-label="Pagination">
   <ul class="pagination">
     {% if page_obj.has_previous %}
 
-    <!-- <li class="page-item"><a class="page-link" 
-      href="?page=1{% for key, value in request.GET.items %}{% if key==key %}&{{key}}={{value}}{% endif %}{% endfor %}">&laquo; First</a>
-    </li> -->
+    <li class="page-item"><a class="page-link" 
+      href="?{% for key, value in request.GET.items %}{{key}}={{value}}&{% endfor %}page=">&laquo;&laquo; First</a>
+    </li>
+    <li class="page-item"><a class="page-link" 
+      href="?{% for key, value in request.GET.items %}{{key}}={{value}}&{% endfor %}page={{ page_obj.previous_page_number }}">&laquo; Previous</a>
+    </li>
     {% endif %}
-    <li class="page-item">
-      <span class="current page-item">
+    <li class="page-item  mx-1 ">
+      <span class="current page-item page-link bg-info text-light">
         Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
     </span>
       </li>
   {% if page_obj.has_next %}
-
-  <li class="page-item"><a class="page-link" href="?page={{ page_obj.paginator.num_pages }}{% for key, value in request.GET.items %}&{{key}}={{value}}{% endfor %}">
-    Last &raquo;</a>
+  <li class="page-item"><a class="page-link" href="?{% for key, value in request.GET.items %}{{key}}={{value}}&{% endfor %}page={{ page_obj.next_page_number }}">
+    Next &raquo;</a>
+  </li>
+  <li class="page-item"><a class="page-link" href="?{% for key, value in request.GET.items %}{{key}}={{value}}&{% endfor %}page={{ page_obj.paginator.num_pages }}">
+    Last &raquo;&raquo;</a>
   </li>
   {% endif %}
   </ul>
@@ -443,5 +447,5 @@ html {
 </script>
 
 <!-- JS for filter and search. -->
-<script src="{% static 'js/site/main.js' %}"></script>
+<!-- <script src="{% static 'js/site/main.js' %}"></script> -->
 {% endblock %}
