working on unit tests

--- a/templates/site/fplist.html
+++ b/templates/site/fplist.html
@@ -223,7 +223,7 @@ html {
         <td class="">{{ fp.annexe5 }}</td>
         <td class="">{{ fp.provider.name_fr }}</td>
         <td class="">{{ fp.location }}</td>
-        <td class=""><img style="max-height: 130px;" src="{{ fp.product.image.url }}" alt="{{ fp.product.name_fr }}"></td>
+        <td class=""><img style="max-height: 130px;" src="{{ fp.image_url }}" alt="{{ fp.product.name_fr }}"></td>
         <td  class="row justify-content-center" style="max-width: 110px;">
           <a href="{{ fp.id }}/change/" class="btn btn-primary p-1">Edit</a>
           <a href="{{ fp.id }}/" class="btn btn-primary my-1 p-1">Detail</a>
