--- a/templates/site/fplist.html
+++ b/templates/site/fplist.html
@@ -128,14 +128,14 @@ html {
             </select>
 
             <select name = "provider" class="custom-select my-1 mx-1 mr-sm-2 border rounded px-1 py-2" id="providerSelect" style="min-width: 150px;">
-              {% if request.GET.trade is None %}
+              {% if request.GET.provider is None %}
                   <option value=""  selected> All Providers</option>
               {% else %}
                   <option value="" >All Providers</option>
               {% endif %}
 
               {% for provider in providers %}
-                {% if request.GET.trade|floatformat:"0" == provider.id|floatformat:"0" %}
+                {% if request.GET.provider|floatformat:"0" == provider.id|floatformat:"0" %}
                   <option value="{{provider.id}}" selected>{{provider.name_fr}}</option>
                 {% else %}
                   <option value="{{provider.id}}">{{provider.name_fr}}</option>
@@ -143,7 +143,7 @@ html {
               {% endfor %}
             </select>
 
-            <select name="annexe5" class="custom-select my-1 mx-1 mr-sm-2 border rounded px-1 py-2" id="annexe5Select" style="min-width: 150px;">
+            <!-- <select name="annexe5" class="custom-select my-1 mx-1 mr-sm-2 border rounded px-1 py-2" id="annexe5Select" style="min-width: 150px;">
               {% if request.GET.annexe5 is None %}
                   <option  value="" selected>All Annexe-5</option>
               {% else %}
@@ -157,7 +157,7 @@ html {
                 <option value="{{annexe5.id}}">{{ annexe5 }}</option>
                 {% endif %}
               {% endfor %}
-            </select>
+            </select> -->
 
             <!-- Search box -->
             <input id="search" name='search' type="text" class="form-control px-4 my-1  mx-1"
@@ -189,7 +189,7 @@ html {
         <!-- <th scope="col" style="min-width:300px">Description (FR)</th>
         <th scope="col" style="min-width:300px">Description (RU)</th> -->
         <th scope="col">LOT</th>
-        <th scope="col">Annexe-5</th>
+        <!-- <th scope="col">Annexe-5</th> -->
         <th scope="col">Provider</th>
         <th scope="col" style="max-width:100px">Location</th>
         <th scope="col">Image</th>
@@ -220,7 +220,7 @@ html {
         <!-- <td class="">{{ fp.product.desc_fr }}</td>
         <td class="">{{ fp.product.desc_ru }}</td> -->
         <td class="">{{ fp.lot.number }}</td>
-        <td class="">{{ fp.annexe5 }}</td>
+        <!-- <td class="">{{ fp.annexe5 }}</td> -->
         <td class="">{{ fp.provider.name_fr }}</td>
         <td class="">{{ fp.location }}</td>
         <td class=""><img style="max-height: 130px;" src="{{ fp.image_url }}" alt="{{ fp.product.name_fr }}"></td>
