--- a/templates/site/site.html
+++ b/templates/site/site.html
@@ -144,7 +144,7 @@ html {
                 {% endif %}
               {% endfor %}
             </select>
-
+<!-- 
             <select name="annexe5" class="custom-select my-1 mx-1 mr-sm-2 border rounded px-1 py-2" id="annexe5Select" style="min-width: 150px;">
               {% if request.GET.annexe5 is None %}
                   <option  value="" selected>All Annexe-5</option>
@@ -159,7 +159,7 @@ html {
                 <option value="{{annexe5.id}}">{{ annexe5 }}</option>
                 {% endif %}
               {% endfor %}
-            </select>
+            </select> -->
 
             <!-- Search box -->
             <input id="search" name='search' type="text" class="form-control px-4 my-1  mx-1"
@@ -260,7 +260,7 @@ html {
         <th scope="col">FP Number</th>
         <th scope="col">Product Name</th>
         <th scope="col">Lot</th>
-        <th scope="col">Annexe-5</th>
+        <!-- <th scope="col">Annexe-5</th> -->
         <th scope="col">Order</th>
         <th scope="col">Facture</th>
         <th scope="col">Specification</th>
@@ -277,7 +277,7 @@ html {
         <td scope="row" class="">{{ fp.number }}</td>
         <td class="">{{ fp.product.name_fr }}</td>
         <td class="" >{{ fp.lot.number }}</td>
-        <td class="" style="min-width: 150px; max-width: 200px;">{{ fp.annexe5 }}</td>
+        <!-- <td class="" style="min-width: 150px; max-width: 200px;">{{ fp.annexe5 }}</td> -->
 
         <!-- Orders -->
         <td class="" style="text-align: center;">
